src/objects/CVMA_YouTube_Video__mdt/CVMA_YouTube_Video__mdt.object-meta.xml
<CustomObject>
    <label>CVMA YouTube Video</label>
    <pluralLabel>CVMA YouTube Videos</pluralLabel>
    <description>Custom metadata type for managing CVMA YouTube videos in carousel component. Supports CEB-curated featured videos with approval workflow.</description>
</CustomObject>