src/objects/CVMA_YouTube_Video__mdt/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Approval Date</label>
    <description>Date video was approved by CEB</description>
    <inlineHelpText>Date video was approved for publication</inlineHelpText>
    <type>Date</type>
</CustomField>