src/objects/CVMA_YouTube_Video__mdt/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <description>CEB approval status for video content</description>
    <inlineHelpText>CEB approval status (Pending = awaiting review, Approved = ready to publish, Denied = rejected)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending CEB Review</fullName>
                <default>true</default>
                <label>Pending CEB Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Changes Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>