src/objects/CVMA_YouTube_Video__mdt/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <description>CEB officer who approved video</description>
    <inlineHelpText>Name of CEB officer who approved video for publication</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>