src/objects/CVMA_YouTube_Video__mdt/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <label>Date Added</label>
    <description>Date video was added to metadata</description>
    <inlineHelpText>Date video metadata was created</inlineHelpText>
    <type>Date</type>
</CustomField>