src/objects/CVMA_YouTube_Video__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <description>Sort order for featured videos in carousel (lower numbers display first)</description>
    <inlineHelpText>Display order in carousel (1 = first position, 2 = second position, etc.)</inlineHelpText>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>