src/objects/CVMA_YouTube_Video__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Video is published and visible to members</description>
    <inlineHelpText>Check to publish video (visible to members). Uncheck to hide video.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>