src/objects/CVMA_YouTube_Video__mdt/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <label>Is Featured</label>
    <description>Display video in featured carousel (primary position)</description>
    <inlineHelpText>Check to display video in featured carousel section</inlineHelpText>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>