src/objects/CVMA_YouTube_Video__mdt/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <label>Thumbnail URL</label>
    <description>Custom thumbnail URL (optional - defaults to YouTube thumbnail)</description>
    <inlineHelpText>Optional custom thumbnail URL. Leave blank to use YouTube default thumbnail.</inlineHelpText>
    <type>Url</type>
</CustomField>