src/objects/CVMA_YouTube_Video__mdt/fields/Video_Category__c.field-meta.xml
<CustomField>
    <fullName>Video_Category__c</fullName>
    <label>Video Category</label>
    <description>Category for organizing videos</description>
    <inlineHelpText>Select video category for organization and filtering</inlineHelpText>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Testimonials</fullName>
            </value>
            <value>
                <fullName>CVMA Mission</fullName>
            </value>
            <value>
                <fullName>Ride Highlights</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Chapter History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>