src/objects/CVMA_YouTube_Video__mdt/fields/Video_Description__c.field-meta.xml
<CustomField>
    <fullName>Video_Description__c</fullName>
    <label>Video Description</label>
    <description>Short description of video content</description>
    <inlineHelpText>Brief description displayed below video in carousel (max 500 characters)</inlineHelpText>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>