src/objects/CVMA_YouTube_Video__mdt/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <description>YouTube video ID (11 characters from URL after v= parameter)</description>
    <inlineHelpText>YouTube video ID from URL (e.g., dQw4w9WgXcQ). Find this in the URL after v= parameter.</inlineHelpText>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>