src/objects/CVMA_YouTube_Video__mdt/fields/Video_Title__c.field-meta.xml
<CustomField>
    <fullName>Video_Title__c</fullName>
    <label>Video Title</label>
    <description>Display title for video in carousel</description>
    <inlineHelpText>Video title displayed in carousel (max 80 characters)</inlineHelpText>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>