src/objects/CVMA_YouTube_Video__mdt/fields/View_Count__c.field-meta.xml
<CustomField>
    <fullName>View_Count__c</fullName>
    <label>View Count</label>
    <description>Number of times video has been viewed in carousel (tracked internally)</description>
    <inlineHelpText>Internal view count for analytics (auto-incremented)</inlineHelpText>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>